started implementing negamax

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,30 +6,27 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-# Add GLFW submodule
-add_subdirectory(external/glfw)
-
-include_directories(external/glfw/include)
+# Add submodules
+add_subdirectory(external/spdlog)
+include_directories(external/spdlog/include)
+include_directories(.)
 
 # Automatically add all .cpp files to the executable
 # search recursively for all .cpp files in the current directory
 # except in the build directory
 file(GLOB_RECURSE CPP_FILES *.cpp)
 list(FILTER CPP_FILES EXCLUDE REGEX "build/")
+list(FILTER CPP_FILES EXCLUDE REGEX "external/")
 
 message("CPP_FILES: ${CPP_FILES}")
 
 add_executable(extreme_ttt ${CPP_FILES})
-
-# Specify the path to the glfw3.a library
-set(GLFW_LIB_PATH ${CMAKE_BINARY_DIR}/external/glfw/src/libglfw3.a)
-
-# Link with glfw3.a and GL
-target_link_libraries(extreme_ttt ${GLFW_LIB_PATH})
-target_link_libraries(extreme_ttt GL)
+if(MSVC)
+  target_compile_options(extreme_ttt PRIVATE /W4 /WX)
+else()
+  target_compile_options(extreme_ttt PRIVATE -Wall -Wextra -Wpedantic -Werror)
+endif()
 
 # Add precompiled header
 set(PCH_FILE pch.h)
-
-# Create precompiled header target
 target_precompile_headers(extreme_ttt PRIVATE ${PCH_FILE})
