--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -91,6 +91,8 @@
         "span": "cpp",
         "variant": "cpp",
         "coroutine": "cpp",
-        "resumable": "cpp"
+        "resumable": "cpp",
+        "codecvt": "cpp",
+        "semaphore": "cpp"
     }
 }
