update code to compile on windows with no errors

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,7 @@ message("CPP_FILES: ${CPP_FILES}")
 add_executable(extreme_ttt ${CPP_FILES})
 if(MSVC)
   target_compile_options(extreme_ttt PRIVATE /W4 /WX)
+  target_link_libraries(extreme_ttt glfw opengl32)
 elseif(UNIX)
   target_compile_options(extreme_ttt PRIVATE -Wall -Wextra -Wpedantic -Werror)
   target_link_libraries(extreme_ttt glfw GL)
