--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -93,6 +93,9 @@
         "coroutine": "cpp",
         "resumable": "cpp",
         "codecvt": "cpp",
-        "semaphore": "cpp"
+        "semaphore": "cpp",
+        "shared_mutex": "cpp",
+        "cfenv": "cpp",
+        "__nullptr": "cpp"
     }
 }
