refactor structure of project

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,20 +9,16 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 # Add submodules
 add_subdirectory(external/spdlog)
 add_subdirectory(external/glfw)
-include_directories(external/spdlog/include)
-include_directories(external/glfw/include)
-include_directories(.)
 
 # Automatically add all .cpp files to the executable
-# search recursively for all .cpp files in the current directory
-# except in the build directory
-file(GLOB_RECURSE CPP_FILES *.cpp)
-list(FILTER CPP_FILES EXCLUDE REGEX "build/")
-list(FILTER CPP_FILES EXCLUDE REGEX "external/")
-
+file(GLOB_RECURSE CPP_FILES src/*.cpp)
 message("CPP_FILES: ${CPP_FILES}")
 
 add_executable(extreme_ttt ${CPP_FILES})
+target_include_directories(extreme_ttt PRIVATE external/spdlog/include)
+target_include_directories(extreme_ttt PRIVATE external/glfw/include)
+target_include_directories(extreme_ttt PRIVATE src)
+
 # set the debug level depending on the build type
 target_compile_definitions(extreme_ttt PRIVATE
     $<$<CONFIG:Debug>:SPDLOG_ACTIVE_LEVEL=SPDLOG_LEVEL_TRACE>
@@ -37,7 +33,7 @@ elseif(UNIX)
 endif()
 
 # Add precompiled header
-set(PCH_FILE pch.h)
+set(PCH_FILE src/pch.h)
 target_precompile_headers(extreme_ttt PRIVATE ${PCH_FILE})
 
 # Include CPack module
