seperated build dir by cmake config

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -108,5 +108,6 @@
         "syncstream": "cpp",
         "typeindex": "cpp",
         "valarray": "cpp"
-    }
+    },
+    "cmake.buildDirectory": "${workspaceFolder}/build/${buildType}"
 }
