added mutex to avoid bug when resetting ai player

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -107,7 +107,10 @@
         "scoped_allocator": "cpp",
         "syncstream": "cpp",
         "typeindex": "cpp",
-        "valarray": "cpp"
+        "valarray": "cpp",
+        "expected": "cpp",
+        "spanstream": "cpp",
+        "stacktrace": "cpp"
     },
     "cmake.buildDirectory": "${workspaceFolder}/build/${buildType}"
 }
